--- a/code/WebApp/WebApp/Components/App.razor
+++ b/code/WebApp/WebApp/Components/App.razor
@@ -15,6 +15,9 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment"></script>
 </body>
 
 </html>
