feat: changed favicon feat: added logo to navbar. feat: changed pagetitle.

--- a/code/WebApp/WebApp/Components/Layout/NavMenu.razor
+++ b/code/WebApp/WebApp/Components/Layout/NavMenu.razor
@@ -1,8 +1,7 @@
 ﻿<nav class="navbar navbar-expand-lg navbardark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand d-flex justify-content-center align-items-center" href="">
-            <img src="/favicon.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top" style="border-radius:100%">
-            <span class="ms-2">IeCAG</span>
+            <img src="/IeCAG_Logo_Lang.png" alt="Logo" height="30" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
