--- a/code/WebApp/WebApp/Components/Pages/Home.razor
+++ b/code/WebApp/WebApp/Components/Pages/Home.razor
@@ -4,6 +4,8 @@
 @inject NavigationManager Navigation;
 @using WebApp.Components.SubComponents;
 
+<PageTitle>IeCAG - Cryptocurrencies</PageTitle>
+
 <h1>Prices</h1>
 
 <table class="table table-hover">
