--- a/code/WebApp/WebApp/Components/Pages/Home.razor
+++ b/code/WebApp/WebApp/Components/Pages/Home.razor
@@ -26,20 +26,21 @@
     </tbody>
 </table>
 
-<PriceChart Prices="Priceslol" @ref="priceChart" />
+<PriceChart Symbol="BTC" pricesList="Priceslol" @ref="priceChart" />
 
 @code {
     PriceChart priceChart;
 
-    public Dictionary<DateTime, decimal> Priceslol { get; set; } = new Dictionary<DateTime, decimal>
+    public List<KeyValuePair<DateTime, decimal>> Priceslol { get; set; } = new List<KeyValuePair<DateTime, decimal>>
 {
-    { DateTime.Now.AddMinutes(-30), 48000 },
-    { DateTime.Now.AddMinutes(-25), 48500 },
-    { DateTime.Now.AddMinutes(-20), 49000 },
-    { DateTime.Now.AddMinutes(-15), 49500 },
-    { DateTime.Now.AddMinutes(-10), 50000 },
-    { DateTime.Now.AddMinutes(-5), 50500 },
-    { DateTime.Now, 51000 } // Aktueller Zeitpunkt
+    new KeyValuePair<DateTime, decimal>(DateTime.Now.AddMinutes(-30), 48000),
+    new KeyValuePair<DateTime, decimal>(DateTime.Now.AddMinutes(-25), 48500),
+    new KeyValuePair<DateTime, decimal>(DateTime.Now.AddMinutes(-20), 49000),
+    
+    new KeyValuePair<DateTime, decimal>(DateTime.Now.AddMinutes(-15), 49500),
+    new KeyValuePair<DateTime, decimal>(DateTime.Now.AddMinutes(-10), 50000),
+    new KeyValuePair<DateTime, decimal>(DateTime.Now.AddMinutes(-5), 50500),
+    new KeyValuePair<DateTime, decimal>(DateTime.Now, 51000),
 };
 
     private List<PriceEntry> priceEntries = new List<PriceEntry>();
