--- a/code/WebApp/WebApp/Components/SubComponents/PriceChart.razor
+++ b/code/WebApp/WebApp/Components/SubComponents/PriceChart.razor
@@ -1,4 +1,6 @@
-﻿<!-- In deiner Blazor-Komponente -->
+﻿@rendermode InteractiveServer
+
+<!-- In deiner Blazor-Komponente -->
 <div>
     <canvas id="@Symbol"></canvas>
 </div>
