--- a/code/WebApp/WebApp/Components/Pages/Account/Login.razor
+++ b/code/WebApp/WebApp/Components/Pages/Account/Login.razor
@@ -29,6 +29,9 @@
             <div class="mb-3 d-grid gap-2">
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
+            <div class="text-center">
+                <p>Don't have an account? <a href="/register">Create Account</a></p>
+            </div>
         </EditForm>
     </div>
 </div>
