--- a/code/WebApp/WebApp/Components/Pages/Wallet.razor
+++ b/code/WebApp/WebApp/Components/Pages/Wallet.razor
@@ -1,6 +1,6 @@
 ﻿@page "/wallet"
 @using Microsoft.AspNetCore.Authorization
-@attribute [Authorize(Roles = "User, Administrator")]
+@attribute [Authorize(Roles = "Administrator,user")]
 
 <h3>Wallet</h3>
 
