--- a/code/WebApp/WebApp/Components/Pages/Account/Registration.razor
+++ b/code/WebApp/WebApp/Components/Pages/Account/Registration.razor
@@ -7,14 +7,14 @@
 @inject NavigationManager navigationManager
 
 <div class="row">
-    <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border">
+    <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border" style="border-radius:25px">
         <EditForm Model="@Model" OnValidSubmit="RegisterUser" FormName="RegisterForm">
             <DataAnnotationsValidator />
             <div class="mb-3 text-center flex-column">
-                <h3>REGISTER</h3>
+                <h3><b>REGISTER</b></h3>
             </div>
             <div class="mb-3">
-                <label>User Name</label>
+                <label>Username</label>
                 <InputText @bind-Value="Model.UserName" class="form-control" placeholder="Username" />
                 <ValidationMessage For="() => Model.UserName" />
             </div>
@@ -32,7 +32,7 @@
                 <span class="text-danger">@errorMessage</span>
             </div>
             <div class="mb-3 d-grid gap-2">
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" class="btn btn-primary" style="border-radius:20px">Register</button>
             </div>
         </EditForm>
     </div>
