--- a/code/WebApp/WebApp/Components/Pages/Home.razor
+++ b/code/WebApp/WebApp/Components/Pages/Home.razor
@@ -39,12 +39,13 @@
 
     protected override async Task OnInitializedAsync()
     {
+        /*
         //Get all the prices from the Azure Table
         var options = AzureTableStorageOptions.Value;
 
         // Verbindung zu Azure Table Storage herstellen
         var serviceClient = new TableServiceClient(new Uri(options.TableEndpoint), new TableSharedKeyCredential(options.AccountName, options.AccountKey));
-        var tableClient = serviceClient.GetTableClient("LatestCryptocurrencyPrices");
+        var tableClient = serviceClient.GetTableClient("CurrentPrices");
 
         // Lade alle Einträge aus der Tabelle
         await foreach (var entity in tableClient.QueryAsync<TableEntity>())
@@ -55,6 +56,7 @@
                     Price = (decimal?)entity["Price"]
                 });
         }
+        */
 
 
 
